refactor: 자바 8로 수정 및 이에 따른 리팩토링