@@ -3,6 +3,7 @@ package vendingmachine.domain;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 public enum Coin {
     COIN_500(500),
@@ -28,7 +29,7 @@ public enum Coin {
         return Arrays.stream(Coin.values())
                 .sorted((c1, c2) -> c2.amount - c1.amount)
                 .filter(coin -> !Objects.equals(coin, Coin.NONE))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public int getAmount() {
