@@ -1,11 +1,12 @@
 package vendingmachine.domain;
 
 import camp.nextstep.edu.missionutils.Randoms;
+import java.util.Arrays;
 import java.util.List;
 
 public class RandomCoinGenerator {
 
-    private static final List<Integer> numbers = List.of(500, 100, 50, 10);
+    private static final List<Integer> numbers = Arrays.asList(500, 100, 50, 10);
 
     private RandomCoinGenerator() {
 
